--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -2,6 +2,10 @@
   font-family: Ubuntu
   src: url(../fonts/Ubuntu.ttf)
   
+@font-face
+  font-family: FiraSansM
+  src: url(../fonts/FiraSans-Medium.ttf)
+  
 
   
 
