--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -59,7 +59,7 @@ ul
   width: auto
   position: absolute
   top: 55px
-  right: 15px
+  right: 32px
   height: auto
   z-index: 10
   margin-top: 0
@@ -88,9 +88,15 @@ ul
   padding-top: 35px
   overflow: hidden  
   box-sizing: border-box
+  outline: 1px solid #000
+  padding-bottom: 10px
 
 .nopadding 
   padding: 0 !important
+
+.top
+  padding-bottom: 30px
+  overflow: hidden
 
 .col-mnu 
   position: relative
@@ -106,7 +112,6 @@ ul
   width: 148px
   height: 129px
 
-
 .toggle-mnu
   width: 56px
   height: 56px
@@ -115,6 +120,8 @@ ul
   text-align: center
   margin: 0
   padding: 0
+  margin-top: 7px
+  margin-right: 30px
   span
     margin-top: 25px
     width: 32px
@@ -128,6 +135,187 @@ ul
 .toggle-mnu.on span
   margin-left: 11px;
   margin-top: 27px
+
+.top-phone
+  text-align: center
+  color: rgb(0, 46, 71)
+  font-family: Ubuntu
+  font-size: 30px
+  font-weight: 400
+  margin-top: 18px
+
+.top-adress
+  color: rgb(132, 132, 132)
+  font-family: Arial
+  font-size: 16px
+  font-weight: 400
+  text-align: center
+  margin-top: 15px
+  
+.top-ord-call 
+  text-align: center
+  margin-top: 17px 
+  a
+    color: rgb(35, 35, 35)
+    font-family: Arial
+    font-size: 16px
+    font-weight: 400  
+    text-decoration: underline  
+    text-align: center
+
+.write-to-chool
+  text-align: center
+  margin-top: 15px
+  button
+    width: 211px
+    height: 46px
+    background-color: rgb(255, 184, 26)
+    border: none
+    color: rgb(41, 41, 41)
+    font-family: Arial
+    font-size: 16px
+    font-weight: 400
+    margin: auto
+
+.top-banner
+  position: relative
+
+.top-banner-text
+  width: 332px
+  height: 180px
+  opacity: 0.85
+  background-color: white
+  margin: auto
+  position: absolute
+  left: calc(50% - 166px)
+  top: 174px
+  text-align: center
+  padding: 25px 15px
+  box-sizing: border-box  
+  p
+    color: rgb(41, 41, 41)
+    font-family: Arial
+    font-size: 16px
+    font-weight: 400
+    line-height: 1.5
+    margin-bottom: 10px
+    span
+      color: rgb(37, 37, 37)
+      font-family: FiraSansM
+      font-size: 21px
+      line-height: 1.5
+      
+.about
+  padding: 45px 20px 25px 20px
+  color: rgb(37, 37, 37)
+  font-family: Arial
+  font-size: 14px
+  font-weight: 400
+  p
+    line-height: 2.2
+    text-align: center
+  h2
+    color: rgb(37, 37, 37)
+    font-family: FiraSansM
+    font-size: 21px    
+    margin-bottom: 25px
+    text-align: center
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*input[type=submit]*/
