--- a/app/css/main.css
+++ b/app/css/main.css
@@ -49,6 +49,10 @@ ul {
   font-family: Ubuntu;
   src: url(../fonts/Ubuntu.ttf); }
 
+@font-face {
+  font-family: FiraSansM;
+  src: url(../fonts/FiraSans-Medium.ttf); }
+
 .toggle-mnu {
   display: block;
   float: right;
@@ -118,7 +122,7 @@ ul {
   width: auto;
   position: absolute;
   top: 55px;
-  right: 15px;
+  right: 32px;
   height: auto;
   z-index: 10;
   margin-top: 0; }
@@ -147,10 +151,16 @@ ul {
   padding-top: 35px;
   overflow: hidden;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  outline: 1px solid #000;
+  padding-bottom: 10px; }
 
 .nopadding {
   padding: 0 !important; }
+
+.top {
+  padding-bottom: 30px;
+  overflow: hidden; }
 
 .col-mnu {
   position: relative; }
@@ -174,7 +184,9 @@ ul {
           border-radius: 100%;
   text-align: center;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  margin-top: 7px;
+  margin-right: 30px; }
   .toggle-mnu span {
     margin-top: 25px;
     width: 32px;
@@ -188,6 +200,93 @@ ul {
 .toggle-mnu.on span {
   margin-left: 11px;
   margin-top: 27px; }
+
+.top-phone {
+  text-align: center;
+  color: #002e47;
+  font-family: Ubuntu;
+  font-size: 30px;
+  font-weight: 400;
+  margin-top: 18px; }
+
+.top-adress {
+  color: #848484;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: center;
+  margin-top: 15px; }
+
+.top-ord-call {
+  text-align: center;
+  margin-top: 17px; }
+  .top-ord-call a {
+    color: #232323;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: underline;
+    text-align: center; }
+
+.write-to-chool {
+  text-align: center;
+  margin-top: 15px; }
+  .write-to-chool button {
+    width: 211px;
+    height: 46px;
+    background-color: #ffb81a;
+    border: none;
+    color: #292929;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: 400;
+    margin: auto; }
+
+.top-banner {
+  position: relative; }
+
+.top-banner-text {
+  width: 332px;
+  height: 180px;
+  opacity: 0.85;
+  background-color: white;
+  margin: auto;
+  position: absolute;
+  left: -webkit-calc(50% - 166px);
+  left: calc(50% - 166px);
+  top: 174px;
+  text-align: center;
+  padding: 25px 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+  .top-banner-text p {
+    color: #292929;
+    font-family: Arial;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-bottom: 10px; }
+    .top-banner-text p span {
+      color: #252525;
+      font-family: FiraSansM;
+      font-size: 21px;
+      line-height: 1.5; }
+
+.about {
+  padding: 45px 20px 25px 20px;
+  color: #252525;
+  font-family: Arial;
+  font-size: 14px;
+  font-weight: 400; }
+  .about p {
+    line-height: 2.2;
+    text-align: center; }
+  .about h2 {
+    color: #252525;
+    font-family: FiraSansM;
+    font-size: 21px;
+    margin-bottom: 25px;
+    text-align: center; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
