--- a/app/css/main.css
+++ b/app/css/main.css
@@ -116,32 +116,41 @@ ul {
 .main-mnu {
   display: none;
   float: right;
-  min-width: 250px;
+  width: 100%;
   text-align: right;
-  background-color: #1C242C;
-  width: auto;
+  background-color: rgba(0, 46, 71, 0.92);
   position: absolute;
-  top: 55px;
-  right: 32px;
+  top: 73px;
+  right: 0;
   height: auto;
   z-index: 10;
-  margin-top: 0; }
-  .main-mnu ul {
-    display: inline; }
+  margin-top: 0;
+  padding: 40px 25px;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
   .main-mnu li {
-    display: block;
-    float: none;
-    margin: 0; }
+    width: 50%;
+    float: left;
+    margin: 0;
+    text-align: left;
+    list-style: square inside;
+    margin-bottom: 20px;
+    color: #8caec0;
+    font-size: 25px; }
   .main-mnu a {
-    display: block;
+    font-family: Ubuntu;
+    font-size: 18px;
+    font-weight: 400;
+    text-decoration: underline;
     color: #FFF;
     -webkit-border-radius: 0;
             border-radius: 0;
     border: none;
-    padding: 10px;
-    text-align: right; }
+    text-align: left;
+    color: #baeaff; }
     .main-mnu a:hover {
-      text-decoration: underline; }
+      color: #ffcc99; }
   .main-mnu a:hover, .main-mnu li.active a {
     border: none; }
 
@@ -259,6 +268,18 @@ ul {
   padding: 25px 15px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
+  .top-banner-text:after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    content: "";
+    display: block;
+    width: 332px;
+    height: 6px;
+    background-color: #ffb81a;
+    background-image: -webkit-gradient(linear, right top, left top, from(#fe6c01), to(#f1ed33));
+    background-image: -webkit-linear-gradient(right, #fe6c01 0%, #f1ed33 100%);
+    background-image: linear-gradient(to left, #fe6c01 0%, #f1ed33 100%); }
   .top-banner-text p {
     color: #292929;
     font-family: Arial;
@@ -277,7 +298,9 @@ ul {
   color: #252525;
   font-family: Arial;
   font-size: 14px;
-  font-weight: 400; }
+  font-weight: 400;
+  text-align: center;
+  padding-bottom: 25px; }
   .about p {
     line-height: 2.2;
     text-align: center; }
@@ -287,6 +310,38 @@ ul {
     font-size: 21px;
     margin-bottom: 25px;
     text-align: center; }
+
+.about-text {
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  height: 675px; }
+  .about-text:after {
+    content: "";
+    display: block;
+    width: 480px;
+    height: 96px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    background: url("../img/about-bot-bg.png") no-repeat bottom left; }
+
+.ha {
+  height: auto !important; }
+  .ha:after {
+    background: none !important; }
+
+.about-text-read-more {
+  margin: auto;
+  width: 425px;
+  height: 39px;
+  background-color: #ffb81a;
+  color: #252525;
+  font-family: Arial;
+  font-size: 14px;
+  font-weight: 400;
+  border: none; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
