--- a/app/css/main.css
+++ b/app/css/main.css
@@ -120,24 +120,36 @@ ul {
   text-align: right;
   background-color: rgba(0, 46, 71, 0.92);
   position: absolute;
-  top: 73px;
+  top: 78px;
   right: 0;
   height: auto;
   z-index: 10;
   margin-top: 0;
   padding: 40px 25px;
-  overflow: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box; }
+  .main-mnu:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: -9px;
+    right: 46px;
+    width: 20px;
+    height: 9px;
+    background: url("../img/triangle.png") no-repeat 0 0; }
+  .main-mnu .active a {
+    color: #ffcc99; }
   .main-mnu li {
-    width: 50%;
+    width: 206px;
     float: left;
     margin: 0;
     text-align: left;
     list-style: square inside;
-    margin-bottom: 20px;
+    margin-bottom: 13px;
     color: #8caec0;
     font-size: 25px; }
+    .main-mnu li:nth-child(odd) {
+      margin-right: 18px; }
   .main-mnu a {
     font-family: Ubuntu;
     font-size: 18px;
@@ -188,7 +200,7 @@ ul {
 .toggle-mnu {
   width: 56px;
   height: 56px;
-  border: 2px solid #000;
+  border: 2px solid #002E47;
   -webkit-border-radius: 100%;
           border-radius: 100%;
   text-align: center;
@@ -200,11 +212,14 @@ ul {
     margin-top: 25px;
     width: 32px;
     margin-left: 10px;
-    height: 3px; }
+    height: 3px;
+    background-color: #002E47; }
     .toggle-mnu span:after {
-      height: 3px; }
+      height: 3px;
+      background-color: #002E47; }
     .toggle-mnu span:before {
-      height: 3px; }
+      height: 3px;
+      background-color: #002E47; }
 
 .toggle-mnu.on span {
   margin-left: 11px;
@@ -342,6 +357,45 @@ ul {
   font-size: 14px;
   font-weight: 400;
   border: none; }
+
+.programm {
+  overflow: hidden;
+  background: url("../img/bg-progr.jpg") no-repeat 0 0;
+  min-height: 818px;
+  padding: 50px 35px; }
+  .programm h2 {
+    color: white;
+    font-family: FiraSansM;
+    font-size: 21px;
+    text-transform: uppercase;
+    text-align: center; }
+
+.gb-ru {
+  text-align: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .gb-ru > div {
+    display: inline-block;
+    height: auto; }
+    .gb-ru > div span {
+      color: white;
+      font-family: FiraSansM;
+      font-size: 16px;
+      line-height: 1.3;
+      text-transform: uppercase; }
+  .gb-ru .plus {
+    width: 30px; }
+    .gb-ru .plus span {
+      font-size: 43px; }
+
+.ru, .gb {
+  width: 186px; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
