--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -57,25 +57,37 @@ ul
   text-align: right
   background-color: rgba(0, 46, 71, 0.92) 
   position: absolute
-  top: 73px
+  top: 78px
   right: 0
   height: auto
   z-index: 10
   margin-top: 0
-  padding: 40px 25px
-  overflow: hidden
+  padding: 40px 25px  
   box-sizing: border-box
+  &:after
+    content: "" 
+    display: block
+    position: absolute
+    top: -9px
+    right: 46px
+    width: 20px
+    height: 9px
+    background: url("../img/triangle.png") no-repeat 0 0
   ul       
+  .active
+    a
+      color: rgb(255, 204, 153)
   li     
-    width: 50%      
+    width: 206px
     float: left    
     margin: 0
     text-align: left
     list-style: square inside
-    margin-bottom: 20px
+    margin-bottom: 13px
     color: #8caec0
-    font-size: 25px    
-    
+    font-size: 25px 
+    &:nth-child(odd)     
+      margin-right: 18px
   a 
     font-family: Ubuntu
     font-size: 18px
@@ -125,22 +137,25 @@ ul
 .toggle-mnu
   width: 56px
   height: 56px
-  border: 2px solid #000
+  border: 2px solid #002E47
   border-radius: 100%
   text-align: center
   margin: 0
   padding: 0
   margin-top: 7px
-  margin-right: 30px
+  margin-right: 30px  
   span
     margin-top: 25px
     width: 32px
     margin-left: 10px
     height: 3px
+    background-color: #002E47 
     &:after
       height: 3px
+      background-color: #002E47 
     &:before
       height: 3px
+      background-color: #002E47 
   
 .toggle-mnu.on span
   margin-left: 11px;
@@ -276,9 +291,39 @@ ul
   border: none
 
 
+.programm
+  overflow: hidden
+  background: url("../img/bg-progr.jpg") no-repeat 0 0
+  min-height: 818px 
+  padding: 50px 35px
+  h2
+    color: white
+    font-family: FiraSansM
+    font-size: 21px
+    text-transform: uppercase
+    text-align: center
 
 
+.gb-ru 
+  text-align: center
+  display: flex  
+  align-items: center
+  > div
+    display: inline-block
+    height: auto
+    span
+      color: white
+      font-family: FiraSansM
+      font-size: 16px      
+      line-height: 1.3
+      text-transform: uppercase  
+  .plus
+    width: 30px
+    span
+      font-size: 43px
 
+.ru, .gb
+  width: 186px
 
 
 
