--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -6,6 +6,9 @@
   font-family: FiraSansM
   src: url(../fonts/FiraSans-Medium.ttf)
   
+@font-face
+  font-family: FiraSans
+  src: url(../fonts/FiraSans-Regular.ttf)
 
   
 
