--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -302,7 +302,7 @@ ul
     font-size: 21px
     text-transform: uppercase
     text-align: center
-
+    margin-bottom: 23px
 
 .gb-ru 
   text-align: center
@@ -310,29 +310,114 @@ ul
   align-items: center
   > div
     display: inline-block
-    height: auto
+    height: auto   
+    box-sizing: border-box    
     span
       color: white
       font-family: FiraSansM
       font-size: 16px      
       line-height: 1.3
-      text-transform: uppercase  
+      text-transform: uppercase 
+      margin-top: 28px 
+      display: block
+    &:first-child
+      img
+        margin-left: -22px
   .plus
     width: 30px
     span
-      font-size: 43px
+      color: rgba(255,255,255,0.85) 
+      font-size: 53px
+      margin-top: 0
+      font-family: FiraSans
+
+.equally
+  width: 100%
+  text-align: center
+  margin-top: 18px
+  margin-bottom: 20px
+  span
+    color: rgba(255,255,255,0.85) 
+    font-size: 53px
+    margin-top: 0
+    font-family: FiraSans
+    text-align: center
 
 .ru, .gb
   width: 186px
+  
+.logo2-list
+  display: flex
+  align-items: top    
+  div    
+    width: 230px
+    &:first-child
+      margin-right: 25px
+      width: 154px
+  li
+    color: white
+    font-family: Arial
+    font-size: 14px
+    font-weight: 400
+    margin-bottom: 10px
+    padding-left: 18px
+    position: relative
+    line-height: 1.5
+    &:before
+      position: absolute
+      left: 0
+      top: 8px
+      content: "" 
+      display: block
+      width: 8px
+      height: 8px
+      background-color: rgb(177, 177, 177)
+
+.educators
+  .outer    
+    background: #fff none repeat scroll 0 0
+    border-color: transparent
+    border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1
+    border-style: solid
+    border-width: 5px
+    box-shadow: 0 -5px 16px 5px rgba(0, 0, 0, 0.19)
+    margin: -42px auto 0 auto
+    padding: 5px 3px
+    position: relative
+    width: 409px    
+  .inner
+    background: #fff none repeat scroll 0 0
+    border-color: transparent
+    border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1
+    border-style: solid
+    border-width: 2px
+    color: #000
+    height: 153px
+    padding: 19px 7px
+    position: relative
+    width: 100%
+
+.educators-text
+  color: black
+  font-family: FiraSansM
+  font-size: 20px  
+  line-height: 1.4
+  text-align: center
+  text-transform: uppercase
+  margin-bottom: 10px
 
 
-
-
-
-
-
-
-
+.educators
+  label
+    width: 50%
+    float: left
+    
+.educators-controls
+  width: 50%
+  float: left
+  input
+    width: 100%
+  
 
 
 
