--- a/app/css/main.css
+++ b/app/css/main.css
@@ -9,6 +9,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-family: inherit;
   vertical-align: baseline; }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
+
 :focus {
   outline: 0; }
 
@@ -37,6 +41,9 @@ q:before, q:after {
 
 blockquote, q {
   quotes: "" ""; }
+
+button {
+  cursor: pointer; }
 
 li {
   list-style: none; }
@@ -129,9 +136,7 @@ ul {
   height: auto;
   z-index: 10;
   margin-top: 0;
-  padding: 40px 25px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+  padding: 40px 25px; }
   .main-mnu:after {
     content: "";
     display: block;
@@ -211,7 +216,9 @@ ul {
   margin: 0;
   padding: 0;
   margin-top: 7px;
-  margin-right: 30px; }
+  margin-right: 30px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
   .toggle-mnu span {
     margin-top: 25px;
     width: 32px;
@@ -500,13 +507,111 @@ ul {
 
 .educators label {
   width: 50%;
-  float: left; }
+  float: left;
+  color: #505050;
+  font-family: FiraSansM;
+  font-size: 17px;
+  line-height: 1.1;
+  text-transform: uppercase;
+  padding-left: 35px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-right: 8px;
+  padding-top: 5px; }
+
+.educators h2 {
+  color: black;
+  font-family: FiraSansM;
+  font-size: 21px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 34px 0 21px 0; }
 
 .educators-controls {
   width: 50%;
-  float: left; }
+  float: left;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box; }
   .educators-controls input {
-    width: 100%; }
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    width: 46px;
+    height: 46px;
+    background-color: white;
+    border: 1px solid lightgrey;
+    -webkit-box-shadow: inset 2.5px 4.3px 5px rgba(0, 0, 0, 0.15);
+            box-shadow: inset 2.5px 4.3px 5px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    float: left;
+    margin-right: 10px; }
+  .educators-controls button {
+    color: #505050;
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: 400;
+    width: 125px;
+    height: 46px;
+    background-color: #ffb81a;
+    border: none;
+    float: left; }
+
+.all-quest {
+  margin-bottom: 38px;
+  overflow: hidden; }
+
+.our-eductors ul {
+  display: block;
+  text-align: center; }
+
+.our-eductors li {
+  display: inline-block;
+  margin: 0 6px;
+  line-height: 1.4; }
+  .our-eductors li:first-child {
+    margin-right: 0; }
+  .our-eductors li:first-child:before {
+    content: "";
+    display: block;
+    text-decoration: none;
+    width: 1px;
+    height: 26px;
+    background: url("../img/separ.png") no-repeat 0 0;
+    float: right;
+    margin-left: 12px; }
+
+.eductors-all {
+  color: #999999;
+  font-family: FiraSansM;
+  font-size: 18px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  background: url("../img/all-edu.png") no-repeat left center;
+  padding-left: 15px; }
+
+.eductors-quest {
+  color: #579fc5;
+  font-family: FiraSansM;
+  font-size: 18px;
+  text-decoration: underline;
+  text-transform: uppercase; }
+
+.slider1 ul {
+  display: block;
+  text-align: center; }
+
+.slider1 li {
+  display: inline-block;
+  width: 182px; }
+
+.slider1-img {
+  width: 182px;
+  height: 182px;
+  overflow: hidden;
+  -webkit-border-radius: 100%;
+          border-radius: 100%; }
+
+.slider1-text {
+  min-height: 150px; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
