--- a/app/css/main.css
+++ b/app/css/main.css
@@ -595,6 +595,22 @@ ul {
   text-decoration: underline;
   text-transform: uppercase; }
 
+.separ-hor, .slider1:after, .slider2:after, .dreams:after {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 100%;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  -webkit-border-image: -webkit-gradient(linear, left top, right bottom, from(#f1ee34), to(#ff6900)) 1 1 1 1;
+  -webkit-border-image: -webkit-linear-gradient(left top, #f1ee34 0%, #ff6900 100%) 1 1 1 1;
+       -o-border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1;
+          border-image: -webkit-gradient(linear, left top, right bottom, from(#f1ee34), to(#ff6900)) 1 1 1 1;
+          border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
+
 .slider1 {
   width: 100%; }
   .slider1 ul {
@@ -605,27 +621,31 @@ ul {
   .slider1 li {
     display: inline-block;
     width: 182px;
-    min-height: 270px;
     overflow: hidden;
     margin: 0 10px; }
     .slider1 li:before {
       content: "";
       display: block;
       position: absolute;
-      left: 0;
-      top: 0;
+      left: 20px;
+      top: 82px;
       width: 11px;
       height: 23px;
-      background: url("../img/arr-l.png") no-repeat 0 0; }
+      background: url("../img/arr-l.png") no-repeat 0 0;
+        background-cursor: pointer; }
     .slider1 li:after {
       content: "";
       display: block;
       position: absolute;
-      right: 0;
-      top: 0;
+      right: 20px;
+      top: 82px;
       width: 11px;
       height: 23px;
-      background: url("../img/arr-r.png") no-repeat 0 0; }
+      background: url("../img/arr-r.png") no-repeat 0 0;
+        background-cursor: pointer; }
+
+.slider1 {
+  position: relative; }
 
 .slider1-img {
   width: 182px;
@@ -650,6 +670,82 @@ ul {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.2; }
+
+.slider2 {
+  padding-bottom: 30px; }
+  .slider2 .slider1-img {
+    width: 182px;
+    height: 182px;
+    padding: 2px;
+    border: 2px solid;
+    -webkit-border-image: -webkit-gradient(linear, left top, right bottom, from(#f1ee34), to(#ff6900)) 1 1 1 1;
+    -webkit-border-image: -webkit-linear-gradient(left top, #f1ee34 0%, #ff6900 100%) 1 1 1 1;
+         -o-border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1;
+            border-image: -webkit-gradient(linear, left top, right bottom, from(#f1ee34), to(#ff6900)) 1 1 1 1;
+            border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1;
+    overflow: hidden;
+    -webkit-border-radius: 0px;
+            border-radius: 0px; }
+  .slider2 .slider1-text .dol {
+    margin-top: 12px;
+    height: auto; }
+
+.outer-img {
+  width: 182px;
+  height: 182px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  overflow: hidden; }
+
+.slider2 {
+  position: relative; }
+
+.about.dreams {
+  overflow: hidden;
+  padding-bottom: 40px; }
+  .about.dreams h2 {
+    margin-top: 0;
+    line-height: 1.4; }
+
+.dreams-blocks {
+  margin-top: 42px; }
+  .dreams-blocks li {
+    width: 50%;
+    float: left;
+    padding: 0 10px;
+    margin-bottom: 40px; }
+    .dreams-blocks li:nth-last-child(1) {
+      margin-bottom: 0; }
+    .dreams-blocks li:nth-last-child(2) {
+      margin-bottom: 0; }
+    .dreams-blocks li a {
+      font-family: FiraSans;
+      font-size: 18px;
+      text-decoration: none; }
+    .dreams-blocks li:first-child a {
+      color: #33acc4; }
+    .dreams-blocks li:nth-child(2) a {
+      color: #f66890; }
+    .dreams-blocks li:nth-child(3) a {
+      color: #fa6900; }
+    .dreams-blocks li:nth-child(4) a {
+      color: #669900; }
+    .dreams-blocks li:nth-child(5) a {
+      color: #ff4e50; }
+    .dreams-blocks li:nth-child(6) a {
+      color: #ff9900; }
+    .dreams-blocks li span {
+      font-family: FiraSans;
+      font-size: 18px;
+      line-height: 1.4;
+      display: block;
+      text-transform: uppercase; }
+
+.dreams {
+  position: relative; }
+
+.dreams-name {
+  margin-top: 17px; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
