--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -425,6 +425,8 @@ ul
     box-sizing: border-box
     padding-right: 8px
     padding-top: 5px
+
+.mobile-content
   h2
     color: black
     font-family: FiraSansM
@@ -570,7 +572,10 @@ ul
 		font-size: 14px
 		font-weight: 400
 		line-height: 1.2
-		
+
+.dop-obr
+  h2
+
 .slider2
   padding-bottom: 30px
   .slider1-img
@@ -653,8 +658,30 @@ ul
 .dreams-name
   margin-top: 17px
 
+.events
+  padding: 0 25px
 
-
+.events-img
+  float: left
+  margin-right: 15px
+  a   
+    display: block
+    width: 125px
+    height: 125px   
+    border-radius: 4px
+    overflow: hidden
+    img      
+      border: 4px solid
+      border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1 
+      border-radius: 5px
+      overflow: hidden
+    
+.events-title
+  color: rgb(63, 63, 63)
+  font-family: FiraSans
+  font-size: 16px  
+  line-height: 1.2
+  text-decoration: underline
 
 
 
