--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -115,8 +115,7 @@ ul
   padding-top: 35px
   overflow: hidden  
   box-sizing: border-box
-  outline: 1px solid #000
-  padding-bottom: 10px
+  outline: 1px solid #000  
 
 .nopadding 
   padding: 0 !important
@@ -660,6 +659,12 @@ ul
 
 .events
   padding: 0 25px
+  padding-bottom: 40px
+  li
+    margin-bottom: 15px
+    overflow: hidden
+    &:last-child
+      margin-bottom: 0
 
 .events-img
   float: left
@@ -680,27 +685,111 @@ ul
   color: rgb(63, 63, 63)
   font-family: FiraSans
   font-size: 16px  
-  line-height: 1.2
-  text-decoration: underline
+  line-height: 1.5
+  text-decoration: none
+  padding-bottom: 0px
+  border-bottom: 1px solid #9f9f9f  
+  &:hover
+    border-bottom: none
+  
+.events-desc
+  margin-top: 12px
+  color: rgb(133, 132, 132)
+  font-family: Arial
+  font-size: 14px  
+  line-height: 1.5
 
+.events-date
+  color: rgb(133, 132, 132)
+  font-family: Arial
+  font-size: 14px
+  font-weight: 400
+  display: block
+  margin-top: 10px
+  text-align: center
 
+.reviews
+  display: table
+  background-image: linear-gradient(to top, rgb(254, 144, 63) 0%, rgb(242, 237, 65) 100%)
+  overflow: hidden
+  padding: 35px 15px 25px 25px
+  li
+    display: table-row
+    margin-bottom: 20px
+    > div
+      padding-bottom: 20px
+    &:last-child
+      > div
+        padding-bottom: 0
+  h2
+    margin-top: 0
+    margin-bottom: 30px
 
+.reviews-img
+  float: left
+  padding-right: 15px
+  display: table-cell
+  vertical-align: top
 
+.reviews-text
+  display: table-cell
+  vertical-align: top
 
+.reviews-title
+  border-bottom: none
+  color: rgb(18, 18, 18)
+  font-family: FiraSansM
+  font-size: 21px
+  text-transform: none
+  margin-bottom: 15px
 
+.reviews-desc
+  color: rgb(29, 29, 29)
+  font-family: Arial
+  font-size: 14px
+  line-height: 1.5
 
+.reviews-date
+  text-align: left
+  @extend .events-date
 
+.view-other
+  display: block
+  padding: 20px 0
+  background-color: rgb(244, 225, 65)
+  color: rgb(18, 18, 18)
+  font-family: FiraSansM
+  font-size: 21px
+  text-decoration: none
+  text-align: center
+  line-height: 1
+  text-align: center
+  span        
+    height: 28px
+    margin: auto
+    text-align: center
+    line-height: 1.55
+    display: inline-block    
+    position: relative
+    border-bottom: 2px solid
+    padding-bottom: 0
+    &:hover
+      border-bottom: none
+    &:after
+      content: "" 
+      display: block
+      background: url("../img/view-other.png") no-repeat 0 0
+      height: 33px
+      width: 33px
+      position: absolute
+      left: -40px
+      top: 0
 
-
-
-
-
-
-
-
-
-
-
+.projects
+  padding: 35px 25px 15px 25px
+  overflow: hidden
+  h2
+    margin-top: 0
 
 
 
