--- a/app/css/main.css
+++ b/app/css/main.css
@@ -881,10 +881,44 @@ ul {
       top: 0; }
 
 .projects {
-  padding: 35px 25px 15px 25px;
+  padding: 35px 16px 15px 16px;
   overflow: hidden; }
   .projects h2 {
     margin-top: 0; }
+  .projects li {
+    float: left;
+    width: 208px;
+    margin: 0 8px; }
+  .projects a {
+    position: relative;
+    display: block;
+    text-decoration: none; }
+  .projects .proj-title {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    display: inline-block;
+    z-index: 10;
+    color: #060606;
+    font-family: FiraSans;
+    font-size: 18px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    width: 100px; }
+    .projects .proj-title span {
+      padding: 3px;
+      background-color: #FFF; }
+
+.proj-desc {
+  display: block;
+  background-color: #f1f1f1;
+  color: #212121;
+  font-family: Arial;
+  font-size: 14px;
+  line-height: 1.5;
+  text-decoration: none;
+  padding: 15px;
+  text-align: center; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
