--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -786,13 +786,44 @@ ul
       top: 0
 
 .projects
-  padding: 35px 25px 15px 25px
+  padding: 35px 16px 15px 16px
   overflow: hidden
   h2
     margin-top: 0
+  li
+    float: left
+    width: 208px
+    margin: 0 8px
+  a
+    position: relative
+    display: block
+    text-decoration: none
+  .proj-title
+    position: absolute
+    left: 10px
+    top: 10px
+    display: inline-block
+    z-index: 10
+    color: rgb(6, 6, 6)
+    font-family: FiraSans
+    font-size: 18px
+    line-height: 1.2
+    text-transform: uppercase 
+    width: 100px    
+    span
+      padding: 3px    
+      background-color: #FFF 
 
-
-
+.proj-desc
+  display: block
+  background-color: rgb(241, 241, 241)
+  color: rgb(33, 33, 33)
+  font-family: Arial
+  font-size: 14px
+  line-height: 1.5
+  text-decoration: none
+  padding: 15px
+  text-align: center
 
 
 
