--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -794,10 +794,14 @@ ul
     float: left
     width: 208px
     margin: 0 8px
-  a
+    margin-bottom: 10px
+  .proj-link-img
     position: relative
     display: block
     text-decoration: none
+    font-size: 0
+    img
+      font-size: 0
   .proj-title
     position: absolute
     left: 10px
@@ -824,13 +828,44 @@ ul
   text-decoration: none
   padding: 15px
   text-align: center
+  min-height: 180px 
+  
+.cart 
+  position: relative
 
+.cart-adress
+  width: 192px
+  min-height: 162px
+  background-color: white
+  padding: 20px 15px
+  top: 80px
+  left: 50px
+  position: absolute
+  color: rgb(6, 6, 6)
+  font-family: FiraSans
+  font-size: 14px
+  b
+    font-size: 28px
+    font-family: FiraSansM
+    line-height: 1
+  p
+    margin-bottom: 10px 
+    line-height: 1.6
+    &:last-child
+      margin-bottom: 0
+  .cart-phone
+    display: block
+    margin-top: 7px
+  
+.footer
+  > div
+    float: left  
 
+.button-copy
+  width: 225px
 
-
-
-
-
+.phone-email-links
+  width: calc(100% - 225px) 
 
 
 
