--- a/app/css/main.css
+++ b/app/css/main.css
@@ -379,7 +379,8 @@ ul {
     font-size: 21px;
     text-transform: uppercase;
     text-align: center;
-    margin-bottom: 23px; }
+    margin-bottom: 23px;
+    margin-top: 0 !important; }
 
 .gb-ru {
   text-align: center;
@@ -518,8 +519,8 @@ ul {
   padding-right: 8px;
   padding-top: 5px; }
 
-.mobile-content h2 {
-  color: black;
+h2 {
+  color: #000;
   font-family: FiraSansM;
   font-size: 21px;
   text-transform: uppercase;
@@ -952,15 +953,63 @@ ul {
     display: block;
     margin-top: 7px; }
 
-.footer > div {
-  float: left; }
+.footer {
+  padding: 25px 23px 15px 23px;
+  overflow: hidden; }
+  .footer > div {
+    float: left; }
+
+.foot-button {
+  height: 50px;
+  background-color: #ffb81a;
+  color: #292929;
+  font-family: Arial;
+  font-size: 16px;
+  padding: 0 25px;
+  border: none;
+  margin-bottom: 18px; }
+
+.copy {
+  color: #9e9e9e;
+  font-family: Arial;
+  font-size: 12px;
+  line-height: 1.2; }
 
 .button-copy {
-  width: 225px; }
+  width: 220px; }
 
 .phone-email-links {
-  width: -webkit-calc(100% - 225px);
-  width: calc(100% - 225px); }
+  width: -webkit-calc(100% - 220px);
+  width: calc(100% - 220px); }
+
+.foot-phone {
+  color: #002e47;
+  font-family: Ubuntu;
+  font-size: 25px;
+  letter-spacing: 0px;
+  margin-bottom: 18px; }
+
+.foot-mail, .foot-links, .foot-mail a, .foot-links a {
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 30px;
+  color: #292929;
+  text-decoration: none; }
+
+.foot-links a {
+  text-decoration: underline; }
+
+.foot-links li {
+  float: left; }
+  .foot-links li:after {
+    content: "|";
+    color: #c3c2c2;
+    font-family: Arial;
+    font-size: 16px;
+    margin: 0 8px; }
+  .foot-links li:last-child:after {
+    display: none; }
 
 /*input[type=submit]*/
 /*==========  Desktop First Method  ==========*/
