--- a/app/css/main.css
+++ b/app/css/main.css
@@ -182,7 +182,11 @@ ul {
   overflow: hidden;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  outline: 1px solid #000; }
+  outline: 1px solid #000;
+  background: url("../img/wrap2.jpg") no-repeat 0 0; }
+
+.mobile-content {
+  opacity: 0.7; }
 
 .nopadding {
   padding: 0 !important; }
@@ -241,7 +245,7 @@ ul {
   font-family: Ubuntu;
   font-size: 30px;
   font-weight: 400;
-  margin-top: 18px; }
+  margin-top: 12px; }
 
 .top-adress {
   color: #848484;
@@ -249,11 +253,11 @@ ul {
   font-size: 16px;
   font-weight: 400;
   text-align: center;
-  margin-top: 15px; }
+  margin-top: 10px; }
 
 .top-ord-call {
   text-align: center;
-  margin-top: 17px; }
+  margin-top: 13px; }
   .top-ord-call a {
     color: #232323;
     font-family: Arial;
@@ -310,16 +314,16 @@ ul {
     font-family: Arial;
     font-size: 16px;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.2;
     margin-bottom: 10px; }
     .top-banner-text p span {
       color: #252525;
       font-family: FiraSansM;
       font-size: 21px;
-      line-height: 1.5; }
+      line-height: 1.7; }
 
 .about {
-  padding: 45px 20px 25px 20px;
+  padding: 39px 20px 25px 20px;
   color: #252525;
   font-family: Arial;
   font-size: 14px;
@@ -327,21 +331,24 @@ ul {
   text-align: center;
   padding-bottom: 25px; }
   .about p {
-    line-height: 2.2;
+    line-height: 2.15;
     text-align: center; }
   .about h2 {
     color: #252525;
     font-family: FiraSansM;
     font-size: 21px;
     margin-bottom: 25px;
-    text-align: center; }
+    text-align: center;
+    margin-top: 0;
+    line-height: 1.3;
+    margin-bottom: 6px; }
 
 .about-text {
   text-align: center;
   margin-bottom: 20px;
   position: relative;
   overflow: hidden;
-  height: 675px; }
+  height: 742px; }
   .about-text:after {
     content: "";
     display: block;
@@ -401,14 +408,15 @@ ul {
       color: white;
       font-family: FiraSansM;
       font-size: 16px;
-      line-height: 1.3;
+      line-height: 1.5;
       text-transform: uppercase;
-      margin-top: 28px;
+      margin-top: 24px;
       display: block; }
     .gb-ru > div:first-child img {
       margin-left: -22px; }
   .gb-ru .plus {
-    width: 30px; }
+    width: 30px;
+    height: 188px; }
     .gb-ru .plus span {
       color: rgba(255, 255, 255, 0.85);
       font-size: 53px;
@@ -418,8 +426,8 @@ ul {
 .equally {
   width: 100%;
   text-align: center;
-  margin-top: 18px;
-  margin-bottom: 20px; }
+  margin-top: 35px;
+  margin-bottom: 12px; }
   .equally span {
     color: rgba(255, 255, 255, 0.85);
     font-size: 53px;
@@ -442,7 +450,7 @@ ul {
   .logo2-list div {
     width: 230px; }
     .logo2-list div:first-child {
-      margin-right: 25px;
+      margin-right: 20px;
       width: 154px; }
   .logo2-list li {
     color: white;
@@ -452,7 +460,7 @@ ul {
     margin-bottom: 10px;
     padding-left: 18px;
     position: relative;
-    line-height: 1.5; }
+    line-height: 1.7; }
     .logo2-list li:before {
       position: absolute;
       left: 0;
