--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -115,7 +115,11 @@ ul
   padding-top: 35px
   overflow: hidden  
   box-sizing: border-box
-  outline: 1px solid #000  
+  outline: 1px solid #000 
+  background: url("../img/wrap2.jpg") no-repeat 0 0  
+
+.mobile-content
+  opacity: 0.7
 
 .nopadding 
   padding: 0 !important
@@ -172,7 +176,7 @@ ul
   font-family: Ubuntu
   font-size: 30px
   font-weight: 400
-  margin-top: 18px
+  margin-top: 12px
 
 .top-adress
   color: rgb(132, 132, 132)
@@ -180,11 +184,11 @@ ul
   font-size: 16px
   font-weight: 400
   text-align: center
-  margin-top: 15px
+  margin-top: 10px
   
 .top-ord-call 
   text-align: center
-  margin-top: 17px 
+  margin-top: 13px 
   a
     color: rgb(35, 35, 35)
     font-family: Arial
@@ -237,16 +241,16 @@ ul
     font-family: Arial
     font-size: 16px
     font-weight: 400
-    line-height: 1.5
+    line-height: 1.2
     margin-bottom: 10px
     span
       color: rgb(37, 37, 37)
       font-family: FiraSansM
       font-size: 21px
-      line-height: 1.5
+      line-height: 1.7
       
 .about
-  padding: 45px 20px 25px 20px
+  padding: 39px 20px 25px 20px
   color: rgb(37, 37, 37)
   font-family: Arial
   font-size: 14px
@@ -254,7 +258,7 @@ ul
   text-align: center
   padding-bottom: 25px
   p
-    line-height: 2.2
+    line-height: 2.15
     text-align: center
   h2
     color: rgb(37, 37, 37)
@@ -262,13 +266,16 @@ ul
     font-size: 21px    
     margin-bottom: 25px
     text-align: center
+    margin-top: 0
+    line-height: 1.3
+    margin-bottom: 6px
 
 .about-text
   text-align: center
   margin-bottom: 20px
   position: relative
   overflow: hidden
-  height: 675px
+  height: 742px
   &:after
     content: "" 
     display: block
@@ -322,15 +329,16 @@ ul
       color: white
       font-family: FiraSansM
       font-size: 16px      
-      line-height: 1.3
+      line-height: 1.5
       text-transform: uppercase 
-      margin-top: 28px 
+      margin-top: 24px 
       display: block
     &:first-child
       img
         margin-left: -22px
   .plus
     width: 30px
+    height: 188px
     span
       color: rgba(255,255,255,0.85) 
       font-size: 53px
@@ -340,8 +348,8 @@ ul
 .equally
   width: 100%
   text-align: center
-  margin-top: 18px
-  margin-bottom: 20px
+  margin-top: 35px
+  margin-bottom: 12px
   span
     color: rgba(255,255,255,0.85) 
     font-size: 53px
@@ -358,7 +366,7 @@ ul
   div    
     width: 230px
     &:first-child
-      margin-right: 25px
+      margin-right: 20px
       width: 154px
   li
     color: white
@@ -368,7 +376,7 @@ ul
     margin-bottom: 10px
     padding-left: 18px
     position: relative
-    line-height: 1.5
+    line-height: 1.7
     &:before
       position: absolute
       left: 0
@@ -425,7 +433,6 @@ ul
     box-sizing: border-box
     padding-right: 8px
     padding-top: 5px
-
 
 h2
   color: #000
