--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -395,10 +395,10 @@ ul
     border-style: solid
     border-width: 5px
     box-shadow: 0 -5px 16px 5px rgba(0, 0, 0, 0.19)
-    margin: -42px auto 0 auto
+    margin: -28px auto 0 auto
     padding: 5px 3px
     position: relative
-    width: 409px    
+    width: 425px    
   .inner
     background: #fff none repeat scroll 0 0
     border-color: transparent
@@ -407,7 +407,7 @@ ul
     border-width: 2px
     color: #000
     height: 153px
-    padding: 19px 7px
+    padding: 10px 7px
     position: relative
     width: 100%
 
@@ -415,24 +415,24 @@ ul
   color: black
   font-family: FiraSansM
   font-size: 20px  
-  line-height: 1.4
+  line-height: 1.5
   text-align: center
   text-transform: uppercase
-  margin-bottom: 10px
+  margin-bottom: 7px
 
 .educators
   label
-    width: 50%
+    width: 206px
     float: left
     color: rgb(80, 80, 80)
     font-family: FiraSansM
     font-size: 17px
-    line-height: 1.1
+    line-height: 1.4
     text-transform: uppercase
-    padding-left: 35px    
+    padding-left: 46px    
     box-sizing: border-box
     padding-right: 8px
-    padding-top: 5px
+    padding-top: 3px
 
 h2
   color: #000
@@ -443,7 +443,7 @@ h2
   margin: 34px 0 21px 0
  
 .educators-controls
-  width: 50%
+  width: 182px
   float: left
   box-sizing: border-box  
   input
@@ -472,24 +472,28 @@ h2
 	overflow: hidden
   
 .our-eductors
-	ul
-		display: block
-		text-align: center
-	li
-		display: inline-block
-		margin: 0 6px
-		line-height: 1.4				
-		&:first-child
-			margin-right: 0
-		&:first-child:before
-			content: ""
-			display: block
-			text-decoration: none
-			width: 1px
-			height: 26px
-			background: url("../img/separ.png") no-repeat 0 0
-			float: right
-			margin-left: 12px		
+  ul
+    display: block
+    text-align: center
+  li
+    display: inline-block
+    margin: 0 6px
+    line-height: 1.4				
+    &:first-child
+      margin-right: 0
+    &:first-child:before
+      content: ""
+      display: block
+      text-decoration: none
+      width: 1px
+      height: 26px
+      background: url("../img/separ.png") no-repeat 0 0
+      float: right
+      margin-left: 12px		
+
+.our-eductors
+  h2
+    margin-bottom: 15px
 
 .eductors-all
 	color: rgb(153, 153, 153)
@@ -530,7 +534,7 @@ h2
 		display: inline-block		
 		width: 182px		
 		overflow: hidden		
-		margin: 0 10px
+		margin: 0 8px
 		&:before
 			content: "" 
 			display: block
@@ -563,7 +567,7 @@ h2
 	overflow: hidden
 	border-radius: 100%	
 	font-size: 0
-	margin-bottom: 25px
+	margin-bottom: 24px
 	
 .slider1-text	
 	span
@@ -572,8 +576,8 @@ h2
 		font-size: 18px		
 		text-transform: uppercase			
 	.dol
-		margin-top: 8px	
-		height: 55px
+		margin-top: 6px	
+		height: 58px
 		color: black
 		font-family: Arial
 		font-size: 14px
@@ -582,6 +586,8 @@ h2
 
 .dop-obr
   h2
+    margin-top: 29px
+    margin-bottom: 31px
 
 .slider2
   padding-bottom: 30px
@@ -593,9 +599,10 @@ h2
     border-image: linear-gradient(to right bottom, #f1ee34 0%, #ff6900 100%) 1 1 1 1     
     overflow: hidden    
     border-radius: 0px 
+    margin-bottom: 27px
   .slider1-text
     .dol
-      margin-top: 12px
+      margin-top: 15px
       height: auto
 
 .outer-img
