--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -68,7 +68,7 @@ ul
   height: auto
   z-index: 10
   margin-top: 0
-  padding: 40px 25px    
+  padding: 30px 25px    
   &:after
     content: "" 
     display: block
@@ -88,7 +88,7 @@ ul
     margin: 0
     text-align: left
     list-style: square inside
-    margin-bottom: 13px
+    margin-bottom: 11px
     color: #8caec0
     font-size: 25px 
     &:nth-child(odd)     
@@ -115,11 +115,9 @@ ul
   padding-top: 35px
   overflow: hidden  
   box-sizing: border-box
-  outline: 1px solid #000 
-  background: url("../img/wrap2.jpg") no-repeat 0 0  
+  outline: 1px solid #ccc  
 
-.mobile-content
-  opacity: 0.7
+.mobile-content  
 
 .nopadding 
   padding: 0 !important
@@ -535,26 +533,27 @@ h2
 		width: 182px		
 		overflow: hidden		
 		margin: 0 8px
-		&:before
-			content: "" 
-			display: block
-			position: absolute
-			left: 20px
-			top: 82px
-			width: 11px
-			height: 23px
-			background: url("../img/arr-l.png") no-repeat 0 0
-      cursor: pointer
-		&:after
-			content: "" 
-			display: block
-			position: absolute
-			right: 20px
-			top: 82px
-			width: 11px
-			height: 23px
-			background: url("../img/arr-r.png") no-repeat 0 0
-      cursor: pointer
+
+.arr-l
+	content: "" 
+	display: block
+	position: absolute
+	left: 20px
+	top: 82px
+	width: 11px
+	height: 23px
+	background: url("../img/arr-l.png") no-repeat 0 0
+  cursor: pointer
+.arr-r
+	content: "" 
+	display: block
+	position: absolute
+	right: 20px
+	top: 82px
+	width: 11px
+	height: 23px
+	background: url("../img/arr-r.png") no-repeat 0 0
+  cursor: pointer
 
 .slider1
   position: relative
@@ -590,7 +589,7 @@ h2
     margin-bottom: 31px
 
 .slider2
-  padding-bottom: 30px
+  padding-bottom: 32px
   .slider1-img
     width: 182px
     height: 182px
@@ -618,18 +617,21 @@ h2
 
 .about.dreams
   overflow: hidden
-  padding-bottom: 40px
+  padding-bottom: 44px
+  padding-top: 27px
   h2
     margin-top: 0
     line-height: 1.4
+    margin-bottom: 10px
 
 .dreams-blocks
-  margin-top: 42px
+  margin-top: 34px
+  overflow: hidden
   li
     width: 50%
     float: left
     padding: 0 10px
-    margin-bottom: 40px
+    margin-bottom: 32px
     &:nth-last-child(1)
       margin-bottom: 0
     &:nth-last-child(2)
@@ -670,13 +672,16 @@ h2
     @extend .separ-hor
 
 .dreams-name
-  margin-top: 17px
+  margin-top: 6px
 
 .events
+  overflow: hidden
   padding: 0 25px
   padding-bottom: 40px
+  h2
+    margin-top: 28px
   li
-    margin-bottom: 15px
+    margin-bottom: 11px
     overflow: hidden
     &:last-child
       margin-bottom: 0
@@ -712,7 +717,7 @@ h2
   color: rgb(133, 132, 132)
   font-family: Arial
   font-size: 14px  
-  line-height: 1.5
+  line-height: 1.7
 
 .events-date
   color: rgb(133, 132, 132)
@@ -720,19 +725,19 @@ h2
   font-size: 14px
   font-weight: 400
   display: block
-  margin-top: 10px
+  margin-top: 20px
   text-align: center
 
 .reviews
   display: table
   background-image: linear-gradient(to top, rgb(254, 144, 63) 0%, rgb(242, 237, 65) 100%)
   overflow: hidden
-  padding: 35px 15px 25px 25px
+  padding: 38px 15px 16px 22px
   li
     display: table-row
     margin-bottom: 20px
     > div
-      padding-bottom: 20px
+      padding-bottom: 11px
     &:last-child
       > div
         padding-bottom: 0
@@ -756,13 +761,13 @@ h2
   font-family: FiraSansM
   font-size: 21px
   text-transform: none
-  margin-bottom: 15px
+  margin-bottom: 13px
 
 .reviews-desc
   color: rgb(29, 29, 29)
   font-family: Arial
   font-size: 14px
-  line-height: 1.5
+  line-height: 1.6
 
 .reviews-date
   text-align: left
@@ -801,10 +806,11 @@ h2
       top: 0
 
 .projects
-  padding: 35px 16px 15px 16px
+  padding: 37px 16px 3px 16px
   overflow: hidden
   h2
     margin-top: 0
+    margin-bottom: 32px
   li
     float: left
     width: 208px
@@ -819,8 +825,8 @@ h2
       font-size: 0
   .proj-title
     position: absolute
-    left: 10px
-    top: 10px
+    left: 11px
+    top: 11px
     display: inline-block
     z-index: 10
     color: rgb(6, 6, 6)
@@ -839,11 +845,11 @@ h2
   color: rgb(33, 33, 33)
   font-family: Arial
   font-size: 14px
-  line-height: 1.5
+  line-height: 1.7
   text-decoration: none
-  padding: 15px
+  padding: 8px 15px 5px 15px
   text-align: center
-  min-height: 180px 
+  min-height: 155px 
   
 .cart 
   position: relative
@@ -852,8 +858,8 @@ h2
   width: 192px
   min-height: 162px
   background-color: white
-  padding: 20px 15px
-  top: 80px
+  padding: 17px 15px 10px 15px
+  top: 81px
   left: 50px
   position: absolute
   color: rgb(6, 6, 6)
@@ -864,16 +870,16 @@ h2
     font-family: FiraSansM
     line-height: 1
   p
-    margin-bottom: 10px 
+    margin-bottom: 5px 
     line-height: 1.6
     &:last-child
       margin-bottom: 0
   .cart-phone
     display: block
-    margin-top: 7px
+    margin-top: 10px
   
 .footer
-  padding: 25px 23px 15px 23px
+  padding: 20px 23px 15px 23px
   overflow: hidden
   > div
     float: left  
@@ -884,9 +890,9 @@ h2
   color: rgb(41, 41, 41)
   font-family: Arial
   font-size: 16px  
-  padding: 0 25px
+  padding: 0 20px
   border: none
-  margin-bottom: 18px
+  margin-bottom: 15px
 
 .copy
   color: rgb(158, 158, 158)
@@ -895,7 +901,7 @@ h2
   line-height: 1.2
 
 .button-copy
-  width: 220px
+  width: 206px
 
 .phone-email-links
   width: calc(100% - 220px) 
@@ -905,7 +911,7 @@ h2
   font-family: Ubuntu
   font-size: 25px 
   letter-spacing: 0px  
-  margin-bottom: 18px
+  margin-bottom: 15px
 
 .foot-mail, .foot-links, .foot-mail a, .foot-links a
   font-family: Arial
